# grainery

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  grainery-plugin.manifest.json  index.html  package-lock.json  package.json  settings-design-extract.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.playwright-mcp/: page-2026-06-08T04-07-49-147Z.yml
docs/: plugin-agent.md  plugin-authoring-guide.md  plugin-system.md  plugin-ui-extension.md
scripts/: grainery-plugin.mjs  linux-system-launcher.sh  validate-plugin-manifest.mjs  validate-release-version.mjs
scripts/lib/: plugin-toolkit.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fonts.rs  lib.rs  main.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/plugins/: mod.rs
src/contexts/: ThemeContext.tsx
src/extensions/: BlockAlignment.ts  FindReplaceExtension.ts  InactiveSelectionExtension.ts  PaginationExtension.ts  PluginAnnotationsExtension.ts  ScreenplayKeymap.ts  index.ts
src/lib/: appUpdates.ts  computePagination.ts  documentSanitizer.ts  elementConfig.ts  elementLoopPreferences.ts  fdx.ts  fileOps.ts  fountain.ts  nativeTheme.ts  paginationConstants.ts  recentFiles.ts  textStyleCompatibility.ts  textStyles.ts  types.ts
src/plugins/: PluginHost.ts  PluginManager.ts  document-helpers.ts  index.ts  permissions.ts  rpc.ts  sdk.ts  types.ts  validation.ts  when.ts  worker-runtime.ts
src/styles/: global.css  plugin-ui.css  screenplay.css  tailwind.css
(+58 files in other folders)
